feat: add labels to annotations
- push annotations
- pull annotations
- example data
